# PPS

./: README.md
man/man1/: ppq.1  ppr.1  pprm.1
man/man8/: ppd.8
src/: INSTALL  Makefile.in  config.h.in  configure  configure.in  filesystem.c  filesystem.h  locking.c  locking.h  logging.c  logging.h  notify.c  notify.h  ppd.c  ppd.h  ppq.c  ppr.c  pprm.c  pps.h
src/hooks/: Makefile.in  add_user.c  sample_input
src/msql/: add_to_msql.acl.sh  create_tables.msql  database.c  database.h
src/printer/: generic.c  generic.h  pjl_jetdirect.c  pjl_jetdirect.h
src/web/: Makefile.in  add_printer.c  add_queue.c  add_user.c  continue_add_printer.c  continue_add_queue.c  continue_add_user.c  index.html  parse.c  parse.h  show_printer.c  show_queue.c  show_setup.c  show_user.c  update_queue.c  update_user.c  user_menu.c
src/web/html/: show_setup.html  user_menu.html
src/web/pjl_jetdirect/: Makefile.in  add_pjl_jetdirect.c  continue_add_pjl_jetdirect.c  show_pjl_jetdirect.c  update_pjl_jetdirect.c
src/web_user/: Makefile.in  default.cgi  default.html  show_balance.c  show_balance.h  show_history.c  show_history.h  user_interface.c
www/: history.html  index.html
www/demo/: default.html
